<resources>

    <string name="facebook_app_id">379860105760359</string>
    <string name="fb_login_protocol_scheme">fb379860105760359</string>


    <string name="title_logo">TRAILER</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="action_settings">Settings</string>




    <string name="app_name">Cinecasa</string>

    <string name="backup">Backup</string>
    <string name="friends">Friends</string>
    <string name="favor">Favor</string>
    <string name="music">Music</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="lamp">Lamp</string>
    <string name="weather">Weather</string>
    <string name="face">Face</string>

    <string name="visibility">Visibility</string>
    <string name="different_style">Different style</string>
    <string name="with_view_pager">With ViewPager</string>

    <string name="no_animation_shifting_mode_item_shifting_mode_icon" translatable="false">no animation/ shifting mode/ item shifting mode/ icon</string>
    <string name="no_item_shifting_mode_icon" translatable="false">no item shifting mode/ icon</string>
    <string name="no_shifting_mode_item_shifting_mode_icon" translatable="false">no shifting mode/ item shifting mode/ icon</string>
    <string name="no_animation_shifting_mode_item_shifting_mode_text" translatable="false">no animation/ shifting mode/ item shifting mode/ text</string>
    <string name="no_shifting_mode_item_shift_mode_text" translatable="false">no shifting mode/ item shift mode/ text</string>
    <string name="no_animation_shifting_mode_item_shifting_mode" translatable="false">no animation/ shifting mode/ item shifting mode</string>
    <string name="no_animation_item_shifting_mode" translatable="false">no animation/ item shifting mode</string>
    <string name="no_animation_shifting_mode" translatable="false">no animation/ shifting mode</string>
    <string name="no_icon" translatable="false">no icon</string>
    <string name="no_text" translatable="false">no text</string>
    <string name="no_item_shifting_mode" translatable="false">no item shifting mode</string>
    <string name="no_shifting_mode" translatable="false">no shifting mode</string>
    <string name="no_animation" translatable="false">no animation</string>
    <string name="normal" translatable="false">normal</string>
    <string name="setup_with_view_pager" translatable="false">setup with view pager</string>
    <string name="badge_view">badge view</string>
    <string name="with_padding" translatable="false">with padding</string>
    <string name="center_icon_only" translatable="false">center icon only</string>
    <string name="smaller_text" translatable="false">smaller text (custom font size)</string>
    <string name="bigger_icon" translatable="false">bigger icon (custom icon size)</string>
    <string name="custom_typeface" translatable="false">custom typeface</string>
    <string name="icon_selector" translatable="false">icon selector</string>
    <string name="icon_margin_top" translatable="false">icon margin top</string>
    <string name="tips_badge_removed" translatable="false">Badge is removed</string>
    <string name="unchecked_first_time" translatable="false">unchecked first time</string>
    <string name="center_fab">Center Fab</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_link_to_register">Sign Up with Email</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

</resources>
